# coursework_3

./: .gitignore  README.md  pyproject.toml  requirements.txt
main/: code.py
tests/: test_code.py
